# CT1111-Assignments

./: CMakeLists.txt  README.md
01-assignment1/: double.c
02-assignment2/: grades.c
03-assignment3/: average.c  even_integers.c
04-assignment4/: array_average.c
05-assignment5/: string_reversal.c  vowel_finder.c
